# api/manu_handler.go
@@ -12,6 +12,29 @@ func InitManuCollectRoute(r chi.Router) {
 	r.Get(common.BASE_CONTEXT+"/manu_collect", ManuCollectHandler)
 	r.Get(common.BASE_CONTEXT+"/check_collect_date", CheckCollectPowerHandler)
 	r.Get(common.BASE_CONTEXT+"/manu_gen_demo_water_data", ManuGenDemoWaterDataHandler)
+	r.Get(common.BASE_CONTEXT+"/debug_get_box_hour_stats", DebugGetBoxHourStatsHandler)
+}
+
+
+// @Summary Manually collect data
+// @Description Manually collect data
+// @Tags Manually collect data
+// @Produce  json
+// @Param mac_addr query string true "mac_addr"
+// @Param year query string true "year"
+// @Param month query string true "month"
+// @Param day query string true "day"
+// @Success 200 {object} common.Response "success"
+// @Router /debug_get_box_hour_stats [get]
+func DebugGetBoxHourStatsHandler(w http.ResponseWriter, r *http.Request) {
+	go func() {
+		data, err := service.DebugGetBoxHourStats(r.URL.Query().Get("mac_addr"), r.URL.Query().Get("year"), r.URL.Query().Get("month"), r.URL.Query().Get("day"))
+		if err != nil {
+			common.Logger.Error("手动收集数据失败," + err.Error())
+		}
+		common.HttpResult(w, common.OK.WithData(data))
+	}()
+	common.HttpResult(w, common.OK.WithData("后台运行，请查看日志"))
 }
 
 // @Summary Manually collect data
